fix: scroll invisible in webkit

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -206,9 +206,10 @@
   -webkit-font-smoothing: antialiased;
 }
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: var(--color-outline-variant) transparent;
+@supports selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-width: none;
+  }
 }
 
 /* ---------------------------------------------------------------------- */
